Fixed alignment issues for other browsers by removing the webkit commands as that is just for chrome.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     position: absolute; 
     top: 275px;; 
     width: 100%;
-    text-align: -webkit-center;
+    text-align: center;
 }
 
 .nvbar-top {
@@ -113,7 +113,7 @@ body {
     position: absolute; 
     top: 385px; 
     width: 100%; 
-    text-align: -webkit-center;
+    text-align: center;
 } 
 
 #searchbar:hover {
@@ -122,7 +122,7 @@ body {
 }
 
 .Sbuttons {
-    text-align: -webkit-center;
+    text-align: center;
     position: absolute; 
     top: 460px; 
     width: 100%;
@@ -153,7 +153,7 @@ body {
 
 .footerbar {
     bottom: 0;
-    position: absolute; 
+    position: fixed; 
     width: 100%; 
     background-color: #f2f2f2;
     border: 1px solid #e2e2e2; 
